--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0",
     "manifest_version": 2,
     "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "incognito.png"
     },
     "background": {
       "scripts": ["background.js"],
@@ -16,9 +16,9 @@
     ],
 
     "icons": {
-      "16": "icon.png",
-      "48": "icon.png",
-      "128": "icon.png"
+      "16": "incognito.png",
+      "48": "incognito.png",
+      "128": "incognito.png"
     }
   }
   
